# OI-Bot

./: .dockerignore  .editorconfig  .env.dev  .env.example  .env.test  .gitignore  .python-version  Dockerfile  README.md  bot.py  data.yml  docker-compose.yml  pyproject.toml  requirements.txt  start-bot.sh  start.sh
.github/workflows/: create-release.yml  docker-image.yml  update-appstore.yml
2.2.0/: .env  data.yml  docker-compose.yml
2.3.2/: docker-compose.yml
2.5.3/: .env
3.1.0/: docker-compose.yml
docs/: 1panel-appstore.md  neuro_draw.md  usage.md
oi_bot/plugins/: about.py  command.py  config.py  help_help.py  neuro_draw.py
oi_bot/plugins/filter/: __init__.py  filter.py
oi_bot/plugins/menu/: __init__.py  command.py  show_menu.py
scripts/: clean-log.js
tests/command/: __init__.py  conftest.py  test_about.py  test_contests.py  test_help.py  test_menu.py  test_neuro.py  utils.py
