[project]
name = "oi-bot"
version = "0.2.0"
description = "This chatbot provides match information for OIer and ACMer, based on the Nonebot2 framework."
readme = "README.md"
requires-python = ">=3.10, <4.0"
authors = [{ name = "talentestors", email = "talentestors@outlook.com" }]

license = "AGPL-3.0-or-later"

dependencies = [
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-luoguluck>=0.2",
    "nonebot-plugin-oi-helper>=0.1.2",
    "nonebot2[aiohttp,fastapi]>=2.4.1",
]

[dependency-groups]
dev = [
    "nb-cli>=1.4.2",
    "nonebot-adapter-console>=0.6.0",
    "nonebot-plugin-docs>=2.4.1",
    "pip>=24.3.1",
]
test = [
    "nonebug>=0.4.3",
    "pytest-asyncio>=0.25.3",
]

[tool.nonebot]
plugin_dirs = ["oi_bot/plugins"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
